--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,8 @@
   	</dependency>
   </dependencies>
   <build>
-    <plugins>
+  
+   <!--  <plugins>
        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -60,7 +61,7 @@
               <target>1.8</target>
            </configuration>
         </plugin>
-    </plugins>
+    </plugins> -->
   </build>
 
 </project>
